sql logging lib: p6spy

--- a/src/main/resources/application-logger.yml
+++ b/src/main/resources/application-logger.yml
@@ -1,4 +1,12 @@
 logging:
     level:
         org.hibernate.SQL: debug
-        org.hibernate.type: trace
+        org.hibernate.type:
+            descriptor:
+                sql:
+                    BasicBinder: TRACE
+        p6spy: debug
+decorator:
+    datasource:
+        p6spy:
+            enable-logging: true
